--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -44,7 +44,6 @@
                 <p><input type="submit" value="登录"/></p>
 
             </fieldset>
-
         </form>
 
         <p>没账号? <a href="#" class="blue">注册账号</a><span class="fontawesome-arrow-right"></span></p>
@@ -78,7 +77,9 @@
 
     function loginError() {
         var error = $('#error').val();
-        layer.msg(error);
+        if (error!=undefined&&error!=""){
+            layer.msg(error);
+        }
     }
 </script>
 </body>
